--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <main>
-        <h1>Mac es RE PEYE!</h1>
+        <h1>Mac es RE PEYACO!</h1>
         <!-- Carmelo use la plataforma de ingles -->
     </main>
     <h1>HOLA MAC PEYE</h1>
