--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 </head>
-pepe
+
 
 <body>
+    <div class="alert alert-primary" role="alert">
+        <strong>Alert Heading</strong> Some Word
+    </div>
+
     <main>
         <h1>Mac es RE PEYACO!</h1>
         <!-- Carmelo use la plataforma de ingles -->
