--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="alert alert-primary" role="alert">
-        <strong>Alert Heading</strong> Some Word
+        <b>Esta es una alerta peye</b>
     </div>
 
     <main>
