--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 
 
 <body>
-    <div class="alert alert-primary" role="alert">
-        <b>Esta es una alerta peye</b>
+    <div class="alert alert-warning" role="alert">
+        <h1>Esta es una alerta peyaco</h1>
+        <p>Lorem ipsum dolor sit amet.</p>
     </div>
-
+    <img src="assets/img/merlina.jpeg" alt="">
+    <!-- hola mama -->
     <main>
         <h1>Mac es RE PEYACO!</h1>
         <!-- Carmelo use la plataforma de ingles -->
